# automated-testing-engine

./: .gitignore  .pylintrc  ATTRIBUTIONS.md  README.md  add_comment_modifier_output  dockerfile  output1.json  pyproject.toml  requirements.txt  test_engine.py
bug_reports/: 02-no-tuple-unpacking-support.md  06-no-join-operator-support.md  07-no-sorted-operator-support.md  08-no-reversed-operator-support.md  11-replace-for-with-while-loop.md  12-different-string-concat.md  14-brackets-exponentiation.md  17-extra-argument-reassignment.md  18-swap-arguments.md  20-sum-numbers.md  21-unknown-interpreter-error.md  23-parser-incomplete-slicing-support.md  5-interpreter-no-while-support.md
datafiles/: invalid_py_programs.json  random_c_programs_addition_assignment.json  random_py_datatypes.json  random_py_datatypes_addition_assignment.json  random_py_programs.json  random_py_programs_addition_assignment.json
its_test_engine/: enums.py  main.py  utils.py
results/: add_comment.txt  addition_assignment.txt  results.txt
test_reports/: 1-no-multi-demensional-list-support.md  10-uncaught-indent-errors.md  11-replace-for-with-while-loop.md  12-different-string-concat.md  13-counting-items.md  14-brackets-exponentiation.md  15-inconsistencies-api-endpoint.md  16-handling-extra-variables-error-localizer.md  19-no-empty-return-support.md  21-unknown-interpreter-error.md  22-interpreter-no-list-bool-support.md  23-parser-incomplete-slicing-support.md  24-wrap-in-try.md  25-try-except-equivalent.md  25-unknown-endpoint-errors.md  26-reverse-list.md  5-interpreter-no-while-support.md  (+3 more)
(+1486 files in other folders)
