[tool.poetry]
name = "its-test-engine"
version = "0.1.0"
description = ""
authors = ["Tex Tang <tex_tang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
pynguin = "^0.35.0"
pytest = "^8.1.1"
pytest-timeout = "^2.3.1"
mutmut = "^2.4.4"
httpx = "^0.27.0"
setuptools = "^69.2.0"
openai = "^1.14.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[pytest]
timeout = 300

[tool.coverage.run]
omit = [
    "tests/*",
    "its_test_engine/**/*/__init__.py",
    "its_test_engine/main.py", # this is main execution logic
    "its_test_engine/its/tester.py", # this is main execution logic
]